--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,15 +1,19 @@
 - name: install curl
+  sudo: yes
   yum:
     name=curl
 
 - name: install jwhois
+  sudo: yes
   yum:
     name=jwhois
 
 - name: install wget
+  sudo: yes
   yum:
     name=wget
 
 - name: install vim
+  sudo: yes
   yum:
     name=vim
