--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,11 @@
 ---
 - hosts: local
-
+  remote_user: root
   roles:
     - common
-    - git
     - bashrc
+    - git
+    - grafics
 
   vars_prompt:
     - name: "git_gitHubUserName"
