--- a/site.yml
+++ b/site.yml
@@ -1,28 +1,11 @@
 ---
+
 - hosts: local
   remote_user: root
   roles:
-    - common
+    #- common
     - bashrc
-    - git
-    - grafics
+    #- git
+    #- grafics
 
-  vars_prompt:
-    - name: "git_gitHubUserName"
-      prompt: "GitHub username"
-      default: "ChrBrAtePages"
-      private: no
 
-    - name: "git_commiterName"
-      prompt: "GitHub commiterName"
-      default: "Christian Breitkreutz"
-      private: no
-
-    - name: "git_commiterMail"
-      prompt: "GitHub commiterMail"
-      default: "cbreitkreutz@epages.com"
-      private: no
-
-    - name: "git_gitHubPassword"
-      prompt: "GitHub password"
-      private: yes
