change github var names

--- a/group_vars/all/git.yml
+++ b/group_vars/all/git.yml
@@ -1,5 +1,5 @@
 ---
-git_gitHubUserName:
-git_commiterName:
-git_commiterMail:
-git_gitHubPassword:
+gitHubUserName:
+commiterName:
+commiterMail:
+gitHubPassword:
