add promt for github password fiy typo

--- a/group_vars/all/git.yml
+++ b/group_vars/all/git.yml
@@ -1,5 +1,4 @@
 ---
-gitHubUserName:
-commiterName:
-commiterMail:
-gitHubPassword:
+gitHubUserName: ChrBrAtePages
+commiterName: Christian Breitkreutz
+commiterMail: cbreitkreutz@epages.com
