--- a/group_vars/all/git.yml
+++ b/group_vars/all/git.yml
@@ -1,4 +1,4 @@
 ---
-gitHubUserName: ChrBrAtePages
-commiterName: Christian Breitkreutz
-commiterMail: cbreitkreutz@epages.com
+gitHubUserName:
+commiterName:
+commiterMail:
