--- a/roles/bashrc/tasks/bashrcSetUp.yml
+++ b/roles/bashrc/tasks/bashrcSetUp.yml
@@ -18,7 +18,7 @@
 - name: extend current .bashrc
   template:
     src=newBashrc.j2 
-    dest="{{ UserHome }}/.bashrc.bak"
+    dest="{{ UserHome }}/.bashrc"
     mode=0644
   when: not currentBashrc.stdout | search("AnsibleCopyToken") #"
 
