--- a/site.yml
+++ b/site.yml
@@ -8,7 +8,8 @@
     - bashrc
     - git
     - IpTables
-    #- grafics
+    - grafics
+    - sonarqube
 
   vars_prompt:
     - name: "gitHubPassword"
