--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -1,4 +1,33 @@
 ---
+- name: install mysql-server
+  sudo: yes
+  yum:
+    name={{ item }}
+  with_items:
+    - mysql-server
+    - MySQL-python
+
+- name: start mysql-server
+  sudo: yes
+  command: "/sbin/service mysqld start"
+
+- name: create sonar database
+  mysql_db:
+    name: sonar
+    encoding: utf8
+    login_user: root
+    login_password: ""
+    state: present
+
+- name: create sonar user
+  mysql_user:
+    name: "sonar"
+    password: "sonar" 
+    priv: sonar.*:ALL
+    state: present
+    login_user: root
+    login_password: ""
+
 - name: create sonarqube folder
   file:
     path: "{{ ansible_env['HOME'] }}/sonarqube"
