download sonar server and move to opts

--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -36,7 +36,7 @@
 
 - name: download sonarqube
   get_url:
-    url: http://repo1.maven.org/maven2/org/codehaus/sonar/runner/sonar-runner-dist/2.4/sonar-runner-dist-2.4.zip
+    url: "https://sonarsource.bintray.com/Distribution/sonarqube/sonarqube-4.5.6.zip"
     dest: "{{ ansible_env['HOME'] }}/sonarqube/sonarqube.zip"
     mode: 0400
 
@@ -46,9 +46,36 @@
     dest: "{{ ansible_env['HOME'] }}/sonarqube"
     mode: 0755
 
+- name: create sonar folder in opt
+  sudo: yes
+  file:
+    path: "/opt/sonar"
+    state: directory
+    mode: 0755
+
+- name: precheck if folder already exists
+  stat: path=/opt/sonar/sonarqube-4.5.6 
+  register: sym
+
+- name: move sonarqube to opt 
+  sudo: yes
+  command: mv "{{ ansible_env['HOME'] }}/sonarqube/sonarqube-4.5.6" "/opt/sonar"
+  when: sym.stat.isdir is not defined
+
+- name: download sonarqube runner
+  get_url:
+    url: "http://repo1.maven.org/maven2/org/codehaus/sonar/runner/sonar-runner-dist/2.4/sonar-runner-dist-2.4.zip"
+    dest: "{{ ansible_env['HOME'] }}/sonarqube/sonarqube_runner.zip"
+    mode: 0400
+
+- name: unzip sonarqube runner
+  unarchive:
+    src: "{{ ansible_env['HOME'] }}/sonarqube/sonarqube_runner.zip"
+    dest: "{{ ansible_env['HOME'] }}/sonarqube"
+    mode: 0755
+
 - name: put shortcut in bash
   template:
     src: sonarqube.sh.j2 
     dest: "{{ ansible_env['HOME'] }}/.bashloader.d/sonarqube.sh"
     mode: 0644
-
