put conditions for better ansible output

--- a/roles/sonarqube/tasks/mysqlSetup.yml
+++ b/roles/sonarqube/tasks/mysqlSetup.yml
@@ -10,6 +10,7 @@
 - name: start mysql-server
   sudo: yes
   command: "/sbin/service mysqld start"
+  changed_when: false
 
 - name: create sonar database
   mysql_db:
