--- a/site.yml
+++ b/site.yml
@@ -3,11 +3,11 @@
 - hosts: local
   remote_user: root
   roles:
-    #- common
-    #- eclipse
-    #- bashrc
-    #- git
-    #- IpTables
+    - common
+    - eclipse
+    - bashrc
+    - git
+    - IpTables
     #- grafics
     - sonarqube
 
