--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,50 +1,89 @@
+---
 # install git
 - name: install git
   sudo: yes
   yum:
     name=git
+  tags:
+    - git
+    - install
+    - sudotask
 
 # setup
 - name: pre create .gitconfig file
   command: touch ~/.gitconfig
+  tags:
+    - git
+    - setup
 
 - name: load all current settings
   shell: git config --global --list
   register: allCurrentSettings
   changed_when: false
+  tags:
+    - git
+    - setup
 
 - name: setup git user
   command: git config --global user.name "{{commiterName}}" #"
   when: not allCurrentSettings.stdout | search("user.name={{commiterName}}") #"
+  tags:
+    - git
+    - setup
 
 - name: setup git mail
   command: git config --global user.email "{{commiterMail}}" #"
   when: not allCurrentSettings.stdout | search("user.email={{commiterMail}}") #"
+  tags:
+    - git
+    - setup
 
 - name: set push default to matching
   command: git config --global push.default matching
   when: not allCurrentSettings.stdout | search("push.default=matching") #"
+  tags:
+    - git
+    - setup
 
 - name: set editor to vim
   command: git config --global core.editor vim
   when: not allCurrentSettings.stdout | search("core.editor=vim") #"
+  tags:
+    - git
+    - setup
 
 # connect git to github
 - name: create ssh folder
   file: path=~/.ssh state=directory
+  tags:
+    - git
+    - setup
+    - ssh
 
 - stat: path=~/.ssh/github_ansible_generated
   register: sshkey
   changed_when: false
+  tags:
+    - git
+    - setup
+    - ssh
 
 - name: Creating pub SSH keys - skip if it's already exist
   command: "ssh-keygen -N '' -f ~/.ssh/github_ansible_generated"
   when: not sshkey.stat.exists
+  tags:
+    - git
+    - setup
+    - ssh
 
 - name: copy public key
   command: "cat ~/.ssh/github_ansible_generated.pub"
   register: publickey
   changed_when: false
+  tags:
+    - git
+    - setup
+    - ssh
 
 - name: add public key to github account
   uri:
@@ -55,4 +94,8 @@
     body: "{\"title\":\"ansible_generated_{{ansible_user_id}}@{{ansible_hostname}}\",\"key\":\"{{publickey.stdout}}\", \"_hack\": null}" #_hack it is because of a bug in the uri package
     force_basic_auth: yes
     body_format: json
-    status_code: 201, 422 #201 - set key, 422 - key is already in use
+    status_code: 201, 422 #201 - set key, 422 - key is already in use  tags:
+    - git
+    - setup
+    - ssh
+    - upload
