--- a/roles/grafics/tasks/main.yml
+++ b/roles/grafics/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
 - name: install grafics
   sudo: yes
-  yum:
+  package:
     name={{ item }}
   with_items:
     - inkscape
     - gimp
-  tags:
-    - grafics
