--- a/group_vars/all/git.yml
+++ b/group_vars/all/git.yml
@@ -1,5 +1,5 @@
 ---
-gitHubUserName: "christianbreitkreutz"
-commiterName: "Christian Breitkreutz"
-commiterMail: "cbreitkreutz@epages.com"
-gitHubPassword: "qawsedrftg54321"
+gitHubUserName: ""
+commiterName: ""
+commiterMail: ""
+gitHubPassword: ""
